--- a/fourtron/templates/fourtron/index.html
+++ b/fourtron/templates/fourtron/index.html
@@ -1,9 +1,9 @@
-<doctype !html/>
-<html>
-	<head>
-		<title>Foursquare + NYC Data => Fourtron</title>
-	</head>
-	<body>
-		<!-- foursquare login button here.-->
-	</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
+
+<h1>welcome</h1>
+
+{% endblock %}
